--- a/day2/docker-compose/Dockerfile
+++ b/day2/docker-compose/Dockerfile
@@ -4,4 +4,8 @@ RUN npm -g install redis
 
 ENV NODE_PATH /usr/local/lib/node_modules
 
+WORKDIR /usr/src/app
+
+COPY app/app.js .
+
 CMD ["node", "app.js"]
