--- a/day2/docker-compose/docker-compose.yml
+++ b/day2/docker-compose/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 
-service:
+services:
   app:
     build: .
     ports:
-      "8080:80"
+      - "8080:80"
   app-redis:
     image: redis:5.0
 
